--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/jest": "^27.4.0",
+    "@types/node": "^17.0.18",
+    "@types/react": "^17.0.39",
+    "@types/react-dom": "^17.0.11",
     "@vx/pattern": "0.0.199",
     "antd": "4.17.3",
     "apexcharts": "^3.23.0",
@@ -55,6 +59,7 @@
     "redux-saga": "^1.1.3",
     "reqwest": "^2.0.5",
     "save": "^2.4.0",
+    "typescript": "^4.5.5",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
