Generate graphql types

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "2.1.5",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.5.9",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -22,6 +23,7 @@
     "firebase": "^8.2.0",
     "framer-motion": "^2.9.5",
     "google-map-react": "^2.1.9",
+    "graphql": "^16.3.0",
     "history": "^4.10.1",
     "immutability-helper": "^3.1.1",
     "lodash": "^4.17.20",
@@ -67,7 +69,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "dev": "concurrently \"npm run start\" \"gulp watch\""
+    "dev": "concurrently \"npm run start\" \"gulp watch\"",
+    "codegen": "graphql-codegen --config codegen.yml"
   },
   "eslintConfig": {
     "extends": [
@@ -88,12 +91,16 @@
     ]
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "2.6.2",
     "autoprefixer": "^9.8.4",
     "gulp": "^4.0.2",
     "gulp-csso": "^4.0.1",
     "gulp-debug": "^4.0.0",
     "gulp-less": "^4.0.1",
     "gulp-postcss": "^8.0.0",
-    "less-plugin-npm-import": "^2.1.0"
+    "less-plugin-npm-import": "^2.1.0",
+    "@graphql-codegen/typescript-operations": "2.3.2",
+    "@graphql-codegen/typescript-react-apollo": "3.2.8",
+    "@graphql-codegen/typescript": "2.4.5"
   }
 }
