--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "graphql": "^16.3.0",
     "history": "^4.10.1",
     "immutability-helper": "^3.1.1",
-    "lodash": "^4.17.20",
+    "lodash": "^4.17.21",
     "rc-tween-one": "^2.7.3",
     "react": "^17.0.1",
     "react-apexcharts": "^1.3.7",
@@ -92,15 +92,16 @@
   },
   "devDependencies": {
     "@graphql-codegen/cli": "2.6.2",
+    "@graphql-codegen/typescript": "2.4.5",
+    "@graphql-codegen/typescript-operations": "2.3.2",
+    "@graphql-codegen/typescript-react-apollo": "3.2.8",
+    "@types/lodash": "^4.14.178",
     "autoprefixer": "^9.8.4",
     "gulp": "^4.0.2",
     "gulp-csso": "^4.0.1",
     "gulp-debug": "^4.0.0",
     "gulp-less": "^4.0.1",
     "gulp-postcss": "^8.0.0",
-    "less-plugin-npm-import": "^2.1.0",
-    "@graphql-codegen/typescript-operations": "2.3.2",
-    "@graphql-codegen/typescript-react-apollo": "3.2.8",
-    "@graphql-codegen/typescript": "2.4.5"
+    "less-plugin-npm-import": "^2.1.0"
   }
 }
